chore(datadog-agent-integrations-extra-compat): do not use venv
Signed-off-by: Massimiliano Giovagnoli <massimiliano.giovagnoli@chainguard.dev>

--- a/datadog-agent.yaml
+++ b/datadog-agent.yaml
@@ -261,33 +261,25 @@ subpackages:
               # This is needed to work around the error "ValueError: ZIP does not support timestamps before 1980"
               SOURCE_DATE_EPOCH=315532800
 
-              # Create virtual environment
-              python3.11 -m venv .venv
-              . .venv/bin/activate
-
-              mkdir /usr/share/datadog-agent
-              sed -i "s|$(pwd)/.venv|/usr/share/datadog-agent|g" .venv/pyvenv.cfg
-              sed -i "s|$(pwd)/.venv|/usr/share/datadog-agent|g" .venv/bin/*
-
               # Dump the packages.
-              mkdir -p /usr/share/datadog-agent/lib/python3.11/site-packages site-packages 
-              rsync -az /usr/share/datadog-agent/lib/python3.11/site-packages/ ./site-packages/
+              mkdir site-packages
+              rsync -az /usr/lib/python3.11/site-packages/ ./site-packages/
 
               # Install check downloader, needed by the `agent integration install` command.
               pip install "./datadog_checks_downloader[deps]"
 
               # Cleanup.
-              find /usr/share/datadog-agent -name "*.pyc" -delete
-              find /usr/share/datadog-agent -name "__pycache__" -exec rm -rf {} +
+              find /usr/lib/python3.11 -name "*.pyc" -delete
+              find /usr/lib/python3.11 -name "__pycache__" -exec rm -rf {} +
 
               # Prepare the package content.
-              diff_packages=$(rsync --include='*/' --exclude='*' --ignore-existing -rv --dry-run /usr/share/datadog-agent/lib/python3.11/site-packages/ ./site-packages/ | grep -v "sending incremental file list" | grep -v -E "^\./$|^sent .+ bytes|total size|^$")
+              diff_packages=$(rsync --include='*/' --exclude='*' --ignore-existing -rv --dry-run /usr/lib/python3.11/site-packages/ ./site-packages/ | grep -v "sending incremental file list" | grep -v -E "^\./$|^sent .+ bytes|total size|^$")
 
               # Include the new packages.
               packages_dir="${{targets.contextdir}}/usr/share/datadog-agent/lib/python3.11/site-packages/"
               mkdir -p "${packages_dir}"
               for package in $diff_packages; do
-                cp -vr "/usr/share/datadog-agent/lib/python3.11/site-packages/${package}" $packages_dir;
+                cp -vr "/usr/lib/python3.11/site-packages/${package}" $packages_dir;
               done
 
   - name: datadog-agent-core-integrations
