--- a/at-spi2-core.yaml
+++ b/at-spi2-core.yaml
@@ -1,7 +1,7 @@
 package:
   name: at-spi2-core
   version: 2.54.0
-  epoch: 0
+  epoch: 1
   description: Protocol definitions and daemon for D-Bus at-spi
   copyright:
     - license: LGPL-2.0-or-later
@@ -19,6 +19,7 @@ environment:
       - libxml2-dev
       - libxtst-dev
       - meson
+      - openssf-compiler-options
       - posix-libc-utils
 
 # creates a new var that contains only the major and minor version to be used in the fetch URL
