--- a/bazel-7.yaml
+++ b/bazel-7.yaml
@@ -1,7 +1,7 @@
 package:
   name: bazel-7
   version: 7.4.0
-  epoch: 0
+  epoch: 1
   description: Bazel is an open-source build and test tool
   resources:
     cpu: 16
@@ -22,6 +22,7 @@ environment:
       - libstdc++-6
       - libstdc++-6-dev
       - openjdk-21
+      - openssf-compiler-options
       - python3
       - zip
 
