--- a/bdftopcf.yaml
+++ b/bdftopcf.yaml
@@ -1,7 +1,7 @@
 package:
   name: bdftopcf
   version: 1.1.2
-  epoch: 0
+  epoch: 1
   description: X.org font bdftopcf
   copyright:
     - license: MIT-open-group
@@ -16,6 +16,7 @@ environment:
       - ca-certificates-bundle
       - font-xproto-dev
       - fontsproto-dev
+      - openssf-compiler-options
       - util-macros
 
 pipeline:
