--- a/bind.yaml
+++ b/bind.yaml
@@ -1,7 +1,7 @@
 package:
   name: bind
   version: 9.18.31
-  epoch: 0
+  epoch: 1
   description: The ISC DNS server
   copyright:
     - license: MPL-2.0
@@ -26,6 +26,7 @@ environment:
       - libxml2-dev
       - nghttp2-dev
       - openldap-dev
+      - openssf-compiler-options
       - openssl-dev
       - perl
       - pkgconf-dev
