--- a/bison.yaml
+++ b/bison.yaml
@@ -1,7 +1,7 @@
 package:
   name: bison
   version: 3.8.2
-  epoch: 4
+  epoch: 5
   description: "The GNU general-purposes parser generator"
   copyright:
     - license: GPL-3.0-or-later
@@ -16,6 +16,7 @@ environment:
       - busybox
       - ca-certificates-bundle
       - m4
+      - openssf-compiler-options
       - wolfi-baselayout
 
 pipeline:
