--- a/botan.yaml
+++ b/botan.yaml
@@ -1,7 +1,7 @@
 package:
   name: botan
   version: 3.6.0
-  epoch: 0
+  epoch: 1
   description: "Cryptography Toolkit"
   copyright:
     - license: BSD-2-Clause
@@ -17,6 +17,7 @@ environment:
       - busybox
       - bzip2-dev
       - ca-certificates-bundle
+      - openssf-compiler-options
       - python3
       - sqlite-dev
       - wolfi-base
