--- a/bpftool.yaml
+++ b/bpftool.yaml
@@ -1,7 +1,7 @@
 package:
   name: bpftool
   version: 7.4.0
-  epoch: 1
+  epoch: 2
   description: A collection of tool to inspect and manipulate eBPF programs
   copyright:
     - license: BSD-3-Clause OR GPL-2.0-only
@@ -19,6 +19,7 @@ environment:
       - git
       - linux-headers
       - llvm-${{vars.llvm-vers}}
+      - openssf-compiler-options
       - zlib-dev
       - zstd-dev
 
