--- a/bubblewrap.yaml
+++ b/bubblewrap.yaml
@@ -1,7 +1,7 @@
 package:
   name: bubblewrap
   version: 0.10.0
-  epoch: 0
+  epoch: 1
   description: "Unprivileged sandboxing tool"
   copyright:
     - license: LGPL-2.0-or-later
@@ -15,6 +15,7 @@ environment:
       - ca-certificates-bundle
       - libcap-dev
       - meson
+      - openssf-compiler-options
 
 pipeline:
   - uses: git-checkout
