commit all the things.

--- a/php-8.2-pdo_snowflake.yaml
+++ b/php-8.2-pdo_snowflake.yaml
@@ -1,7 +1,7 @@
 package:
   name: php-8.2-pdo_snowflake
   version: 3.0.2
-  epoch: 1
+  epoch: 2
   description: "Snowflake driver that uses the PHP Data Objects (PDO) extension"
   copyright:
     - license: Apache-2.0
@@ -11,7 +11,13 @@ package:
     - x86_64
   dependencies:
     runtime:
-      - php-8.2
+      - php-${{vars.phpMM}}
+
+var-transforms:
+  - from: ${{package.name}}
+    match: ^php-(\d+\.\d+)-.*$
+    replace: "$1"
+    to: phpMM
 
 environment:
   contents:
@@ -28,9 +34,9 @@ environment:
       - gcc
       - libtool
       - openssf-compiler-options
-      - php-8.2
-      - php-8.2-dev
-      - php-8.2-pdo
+      - php-${{vars.phpMM}}
+      - php-${{vars.phpMM}}-dev
+      - php-${{vars.phpMM}}-pdo
       - unixodbc-dev
       - zlib-dev
 
