--- a/php-8.3-pecl-pdosqlsrv.yaml
+++ b/php-8.3-pecl-pdosqlsrv.yaml
@@ -1,13 +1,19 @@
 package:
   name: php-8.3-pecl-pdosqlsrv
   version: 5.12.0
-  epoch: 0
+  epoch: 1
   description: "Provides PHP 8.3 Microsoft Drivers for SQL Server (PDO_SQLSRV) - PECL"
   copyright:
     - license: MIT
   dependencies:
     runtime:
-      - php-8.3
+      - php-${{vars.phpMM}}
+
+var-transforms:
+  - from: ${{package.name}}
+    match: ^php-(\d+\.\d+)-.*$
+    replace: "$1"
+    to: phpMM
 
 environment:
   contents:
@@ -22,7 +28,7 @@ environment:
       - gcc
       - libtool
       - openssf-compiler-options
-      - php-8.3-dev
+      - php-${{vars.phpMM}}-dev
       - unixodbc-dev
 
 pipeline:
