--- a/php-8.1-pecl-http.yaml
+++ b/php-8.1-pecl-http.yaml
@@ -1,13 +1,19 @@
 package:
   name: php-8.1-pecl-http
   version: 4.2.4
-  epoch: 0
+  epoch: 1
   description: "Provides PHP 8.1 HTTP module for PHP Extended HTTP Support- PECL"
   copyright:
     - license: BSD-2-Clause
   dependencies:
     runtime:
-      - php-8.1
+      - php-${{vars.phpMM}}
+
+var-transforms:
+  - from: ${{package.name}}
+    match: ^php-(\d+\.\d+)-.*$
+    replace: "$1"
+    to: phpMM
 
 environment:
   contents:
@@ -25,8 +31,8 @@ environment:
       - libtool
       - openssf-compiler-options
       - openssl-dev
-      - php-8.1-dev
-      - php-8.1-pecl-raphf
+      - php-${{vars.phpMM}}-dev
+      - php-${{vars.phpMM}}-pecl-raphf
       - zlib-dev
 
 pipeline:
