--- a/php-8.2-pecl-raphf.yaml
+++ b/php-8.2-pecl-raphf.yaml
@@ -1,13 +1,19 @@
 package:
   name: php-8.2-pecl-raphf
   version: 2.0.1
-  epoch: 3
+  epoch: 4
   description: "Provides PHP 8.2 resource and persistent handles factory - PECL"
   copyright:
     - license: PHP-3.01
   dependencies:
     runtime:
-      - php-8.2
+      - php-${{vars.phpMM}}
+
+var-transforms:
+  - from: ${{package.name}}
+    match: ^php-(\d+\.\d+)-.*$
+    replace: "$1"
+    to: phpMM
 
 environment:
   contents:
@@ -22,7 +28,7 @@ environment:
       - gcc
       - libtool
       - openssf-compiler-options
-      - php-8.2-dev
+      - php-${{vars.phpMM}}-dev
 
 pipeline:
   - uses: fetch
