--- a/php-8.3-excimer.yaml
+++ b/php-8.3-excimer.yaml
@@ -1,16 +1,22 @@
 package:
   name: php-8.3-excimer
   version: 1.2.2
-  epoch: 0
+  epoch: 1
   description: "Excimer is a PHP extension that provides an interrupting timer and a low-overhead sampling profiler."
   copyright:
     - license: Apache-2.0
   dependencies:
     runtime:
       - ${{package.name}}-config
-      - php-8.3
+      - php-${{vars.phpMM}}
     provides:
       - php-excimer=${{package.full-version}}
+
+var-transforms:
+  - from: ${{package.name}}
+    match: ^php-(\d+\.\d+)-.*$
+    replace: "$1"
+    to: phpMM
 
 environment:
   contents:
@@ -18,8 +24,8 @@ environment:
       - autoconf
       - build-base
       - busybox
-      - php-8.3
-      - php-8.3-dev
+      - php-${{vars.phpMM}}
+      - php-${{vars.phpMM}}-dev
 
 pipeline:
   - uses: git-checkout
