--- a/php-8.3-msgpack.yaml
+++ b/php-8.3-msgpack.yaml
@@ -1,16 +1,22 @@
 package:
   name: php-8.3-msgpack
   version: 3.0.0
-  epoch: 0
+  epoch: 1
   description: "A PHP extension for msgpack"
   copyright:
     - license: BSD-3-Clause
   dependencies:
     runtime:
       - ${{package.name}}-config
-      - php-8.3
+      - php-${{vars.phpMM}}
     provides:
       - php-msgpack=${{package.full-version}}
+
+var-transforms:
+  - from: ${{package.name}}
+    match: ^php-(\d+\.\d+)-.*$
+    replace: "$1"
+    to: phpMM
 
 environment:
   contents:
@@ -18,8 +24,8 @@ environment:
       - autoconf
       - build-base
       - busybox
-      - php-8.3
-      - php-8.3-dev
+      - php-${{vars.phpMM}}
+      - php-${{vars.phpMM}}-dev
 
 pipeline:
   - uses: git-checkout
