--- a/php-8.3-zstd.yaml
+++ b/php-8.3-zstd.yaml
@@ -1,14 +1,20 @@
 package:
   name: php-8.3-zstd
   version: 0.13.3
-  epoch: 0
+  epoch: 1
   description: Zstd Extension for PHP
   copyright:
     - license: MIT
   dependencies:
     runtime:
       - ${{package.name}}-config
-      - php-8.3
+      - php-${{vars.phpMM}}
+
+var-transforms:
+  - from: ${{package.name}}
+    match: ^php-(\d+\.\d+)-.*$
+    replace: "$1"
+    to: phpMM
 
 environment:
   contents:
@@ -17,8 +23,8 @@ environment:
       - build-base
       - busybox
       - file
-      - php-8.3
-      - php-8.3-dev
+      - php-${{vars.phpMM}}
+      - php-${{vars.phpMM}}-dev
       - zstd-dev
 
 pipeline:
