--- a/fontconfig.yaml
+++ b/fontconfig.yaml
@@ -1,7 +1,7 @@
 package:
   name: fontconfig
   version: 2.15.0
-  epoch: 1
+  epoch: 2
   description: Library for configuring and customizing font access
   copyright:
     - license: MIT
@@ -30,6 +30,7 @@ environment:
       - gperf
       - libpng-dev
       - libtool
+      - openssf-compiler-options
       - python3-dev
       - zlib-dev
 
