--- a/gitea.yaml
+++ b/gitea.yaml
@@ -1,7 +1,7 @@
 package:
   name: gitea
   version: 1.22.3
-  epoch: 0
+  epoch: 1
   description: self-hosted git service
   copyright:
     - license: MIT
@@ -14,6 +14,7 @@ environment:
       - go
       - nodejs
       - npm
+      - openssf-compiler-options
 
 pipeline:
   - uses: git-checkout
