--- a/gnutls.yaml
+++ b/gnutls.yaml
@@ -1,7 +1,7 @@
 package:
   name: gnutls
   version: 3.8.7
-  epoch: 0
+  epoch: 1
   description: TLS protocol implementation
   copyright:
     - license: LGPL-2.1-or-later
@@ -30,6 +30,7 @@ environment:
       - libunistring-dev
       - linux-headers
       - nettle-dev
+      - openssf-compiler-options
       - p11-kit-dev
       - texinfo
       - zlib-dev
