--- a/golangci-lint.yaml
+++ b/golangci-lint.yaml
@@ -1,7 +1,7 @@
 package:
   name: golangci-lint
   version: 1.61.0
-  epoch: 0
+  epoch: 1
   description: Fast linters Runner for Go
   copyright:
     - license: Apache-2.0
@@ -16,6 +16,7 @@ environment:
       - busybox
       - ca-certificates-bundle
       - go
+      - openssf-compiler-options
 
 pipeline:
   - uses: git-checkout
