--- a/gomplate.yaml
+++ b/gomplate.yaml
@@ -1,7 +1,7 @@
 package:
   name: gomplate
   version: 4.1.0
-  epoch: 2
+  epoch: 3
   description: A go templating utility.
   copyright:
     - license: MIT
@@ -14,6 +14,7 @@ environment:
       - ca-certificates-bundle
       - git
       - go
+      - openssf-compiler-options
       - wolfi-baselayout
 
 pipeline:
