--- a/gpgme.yaml
+++ b/gpgme.yaml
@@ -1,7 +1,7 @@
 package:
   name: gpgme
   version: 1.23.2
-  epoch: 1
+  epoch: 2
   description: GNU - GnuPG Made Easy
   copyright:
     - license: GPL-3.0-or-later
@@ -20,6 +20,7 @@ environment:
       - gpgsm
       - libassuan-dev
       - libgpg-error-dev
+      - openssf-compiler-options
 
 pipeline:
   - uses: fetch
