--- a/grafana-alloy.yaml
+++ b/grafana-alloy.yaml
@@ -1,7 +1,7 @@
 package:
   name: grafana-alloy
   version: 1.4.3
-  epoch: 0
+  epoch: 1
   description: OpenTelemetry Collector distribution with programmable pipelines
   copyright:
     - license: Apache-2.0
@@ -13,6 +13,7 @@ environment:
       - ca-certificates-bundle
       - go
       - nodejs-18
+      - openssf-compiler-options
       - systemd-dev
       - tzdata
       - yarn
