--- a/graphviz.yaml
+++ b/graphviz.yaml
@@ -1,7 +1,7 @@
 package:
   name: graphviz
   version: 12.1.2
-  epoch: 0
+  epoch: 1
   description: Graph Visualization Tools
   copyright:
     - license: EPL-1.0
@@ -30,6 +30,7 @@ environment:
       - libxext-dev
       - lua5.4-dev
       - m4
+      - openssf-compiler-options
       - pango-dev
       - python3-dev
       - swig
