--- a/gtk-4.yaml
+++ b/gtk-4.yaml
@@ -1,7 +1,7 @@
 package:
   name: gtk-4
   version: 4.16.3
-  epoch: 1
+  epoch: 2
   description: The GTK+ Toolkit (v4)
   copyright:
     - license: LGPL-2.1-or-later
@@ -65,6 +65,7 @@ environment:
       - mesa-dev
       - meson
       - ninja
+      - openssf-compiler-options
       - orc-compiler
       - orc-dev
       - pango-dev
