--- a/hugo-extended.yaml
+++ b/hugo-extended.yaml
@@ -1,7 +1,7 @@
 package:
   name: hugo-extended
   version: 0.136.5
-  epoch: 0
+  epoch: 1
   description: The world's fastest framework for building websites.
   copyright:
     - license: Apache-2.0
@@ -15,6 +15,7 @@ environment:
       - busybox
       - ca-certificates-bundle
       - git
+      - openssf-compiler-options
 
 pipeline:
   - uses: git-checkout
