--- a/hwloc.yaml
+++ b/hwloc.yaml
@@ -1,7 +1,7 @@
 package:
   name: hwloc
   version: 2.11.2
-  epoch: 0
+  epoch: 1
   description: Portable abstraction of hierarchical hardware architectures
   copyright:
     - license: BSD-3-Clause
@@ -19,6 +19,7 @@ environment:
       - libxml2-dev
       - ncurses-dev
       - numactl-dev
+      - openssf-compiler-options
       - py3-sphinx-7
       - py3-sphinx-rtd-theme
       - python-3.12
