add note on architecture target
Signed-off-by: Karl Haworth <karl.haworth@aa.com>

--- a/drawio.yaml
+++ b/drawio.yaml
@@ -4,7 +4,7 @@ package:
   epoch: 0
   description: "Draw.io Desktop Headless"
   target-architecture:
-    - x86_64
+    - x86_64  # due to so:ld-linux-x86-64.so.2 for arm64 not being available
   copyright:
     - license: Apache-2.0
   dependencies:
