--- a/php-8.1-pdo_snowflake.yaml
+++ b/php-8.1-pdo_snowflake.yaml
@@ -72,6 +72,23 @@ pipeline:
 
   - uses: strip
 
+test:
+  environment:
+    contents:
+      packages:
+        - php-8.1
+        - php-8.1-pdo
+  pipeline:
+    - name: Verify Extension is Loaded
+      runs: |
+        php -m | grep -i 'pdo_snowflake'
+        if [ $? -ne 0 ]; then
+          echo "Test failed: pdo snowflake extension is not loaded."
+          exit 1
+        else
+          echo "Test passed: pdo snowflake extension is loaded."
+        fi
+
 update:
   enabled: true
   github:
