--- a/imagemagick.yaml
+++ b/imagemagick.yaml
@@ -1,7 +1,7 @@
 package:
   name: imagemagick
   version: 7.1.1.39
-  epoch: 0
+  epoch: 1
   description: Tools and libraries for manipulating common image formats
   copyright:
     - license: ImageMagick
@@ -31,6 +31,7 @@ environment:
       - libxext-dev
       - libxml2-dev
       - openjpeg-dev
+      - openssf-compiler-options
       - pango-dev
       - perl-dev
       - tiff-dev
