--- a/ipset.yaml
+++ b/ipset.yaml
@@ -1,7 +1,7 @@
 package:
   name: ipset
   version: "7.22"
-  epoch: 2
+  epoch: 3
   description: Manage Linux IP sets
   copyright:
     - license: GPL-2.0-only
@@ -17,6 +17,7 @@ environment:
       - libmnl-dev
       - libtool
       - linux-headers
+      - openssf-compiler-options
       - pkgconf-dev
 
 pipeline:
