--- a/iptables.yaml
+++ b/iptables.yaml
@@ -1,7 +1,7 @@
 package:
   name: iptables
   version: 1.8.10
-  epoch: 6
+  epoch: 7
   description: Linux kernel firewall, NAT and packet mangling tools
   copyright:
     - license: GPL-2.0-or-later
@@ -22,6 +22,7 @@ environment:
       - libnftnl-dev
       - libtool
       - linux-headers
+      - openssf-compiler-options
       - pkgconf-dev
 
 pipeline:
