--- a/apache-nifi.yaml
+++ b/apache-nifi.yaml
@@ -14,8 +14,8 @@ package:
       - busybox
       - coreutils
       - glibc-locale-en
-      - openjdk-11-default-jvm
-      - openjdk-11-jre
+      - openjdk-21-default-jvm
+      - openjdk-21-jre
       - xmlstarlet
 
 environment:
@@ -28,13 +28,10 @@ environment:
       - maven
       - nodejs-20
       - npm
-      - openjdk-11
-      - openjdk-11-default-jvm
+      - openjdk-21-default-jdk
       - openssl-dev
       - rsync
-      - wolfi-base
   environment:
-    JAVA_HOME: /usr/lib/jvm/java-11-openjdk
     MAVEN_OPTS: |
       -Xmx4g
       -XX:ReservedCodeCacheSize=1g
@@ -52,12 +49,6 @@ pipeline:
       repository: https://github.com/apache/nifi
       tag: rel/nifi-${{package.version}}
       expected-commit: 2f13b609bdb77cb985aa35e8b66b4f04274d7c59
-
-  - uses: maven/pombump
-
-  - uses: maven/pombump
-    with:
-      properties-file: pombump-properties.yaml
 
   - runs: |
       # Use single thread on x86_64
@@ -97,9 +88,6 @@ pipeline:
 
       # Fix paths in scripts
       sed -i "s|/opt|/usr/share|g" "${{targets.contextdir}}/${NIFI_BASE}"/scripts/*.sh
-
-      # Remove batch scripts
-      rm "${{targets.contextdir}}/${NIFI_HOME}"/bin/*.bat
 
       # Symlink current release to versioned path
       ln -sf "${NIFI_HOME}" "${{targets.contextdir}}/${NIFI_BASE}/nifi-${{package.version}}"
@@ -162,5 +150,5 @@ update:
 test:
   pipeline:
     - runs: |
-        export JAVA_HOME=/usr/lib/jvm/java-11-openjdk
+        export JAVA_HOME=/usr/lib/jvm/java-21-openjdk
         /usr/share/nifi/nifi-current/bin/nifi.sh start
