add missing provides to versioned streamed package
Signed-off-by: Batuhan Apaydin <batuhan.apaydin@chainguard.dev>

--- a/cloud-provider-aws-1.31.yaml
+++ b/cloud-provider-aws-1.31.yaml
@@ -1,10 +1,13 @@
 package:
   name: cloud-provider-aws-1.31
   version: 1.31.1
-  epoch: 0
+  epoch: 1
   description: The AWS cloud provider provides the interface between a Kubernetes cluster and AWS service APIs.
   copyright:
     - license: Apache-2.0
+  dependencies:
+    provides:
+      - cloud-provider-aws=${{package.full-version}}
 
 pipeline:
   - uses: git-checkout
@@ -16,6 +19,9 @@ pipeline:
 subpackages:
   - name: ${{package.name}}-cloud-controller-manager
     description: The AWS Cloud Controller Manager is the controller that is primarily responsible for creating and updating AWS loadbalancers (classic and NLB) and node lifecycle management.
+    dependencies:
+      provides:
+        - cloud-provider-aws-cloud-controller-manager=${{package.full-version}}
     pipeline:
       - uses: go/build
         with:
@@ -32,6 +38,9 @@ subpackages:
 
   - name: ${{package.name}}-ecr-credential-provider
     description: The credential provider is a binary that is executed by kubelet to provide credentials for images in ECR.
+    dependencies:
+      provides:
+        - cloud-provider-aws-ecr-credential-provider=${{package.full-version}}
     pipeline:
       - uses: go/build
         with:
@@ -48,6 +57,9 @@ subpackages:
 
   - name: "${{package.name}}-cloud-controller-manager-compat"
     description: "Compatibility package to place binaries in the location expected by upstream Dockerfile"
+    dependencies:
+      provides:
+        - cloud-provider-aws-cloud-controller-manager-compat=${{package.full-version}}
     pipeline:
       - runs: |
           mkdir -p "${{targets.contextdir}}/bin"
