--- a/poppler.yaml
+++ b/poppler.yaml
@@ -14,18 +14,28 @@ environment:
       - busybox
       - ca-certificates-bundle
       - cairo-dev
+      - cairo-gobject
+      - clang-19
       - cmake
       - expat-dev
-      - gobject-introspection-dev
+      - gdk-pixbuf-dev
+      - glib-dev
+      - glib-gir
+      - gtk-3-dev
       - lcms2-dev
       - libfontconfig1
       - libjpeg-turbo-dev
       - libnspr-dev
       - libnss-dev
       - libpng-dev
+      - libxcomposite-dev
+      - libxcursor-dev
+      - libxdamage-dev
       - libxml2-dev
+      - libxrandr-dev
       - openjpeg-dev
       - openjpeg-tools
+      - pango-dev
       - samurai
       - tiff-dev
       - zlib-dev
@@ -44,7 +54,13 @@ pipeline:
         -DENABLE_LIBCURL=OFF \
         -DCMAKE_BUILD_TYPE=Release \
         -DENABLE_QT5=OFF \
-        -DENABLE_QT6=OFF
+        -DENABLE_QT6=OFF \
+        -DBUILD_MANUAL_TESTS=OFF \
+        -DBUILD_CPP_TESTS=OFF \
+        -DBUILD_CPP_TESTS=OFF \
+        -DBUILD_QT6_TESTS=OFF \
+        -DBUILD_QT5_TESTS=OFF \
+        -DBUILD_GTK_TESTS=OFF \
 
   - uses: cmake/build
 
