--- a/cloud-provider-azure-1.31.yaml
+++ b/cloud-provider-azure-1.31.yaml
@@ -13,30 +13,32 @@ pipeline:
       tag: v${{package.version}}
       expected-commit: 301bb5195472aa76bb36e24726c197ccbb19cfca
 
+  - uses: go/build
+    with:
+      packages: ./cmd/cloud-controller-manager
+      ldflags: |
+        -X sigs.k8s.io/cloud-provider-azure/pkg/version.gitVersion=v${{package.version}}
+        -X k8s.io/client-go/pkg/version.gitVersion=v${{package.version}}
+        -X sigs.k8s.io/cloud-provider-azure/pkg/version.gitCommit=$(git rev-parse HEAD)
+        -X k8s.io/client-go/pkg/version.gitCommit=$(git rev-parse HEAD)
+        -X sigs.k8s.io/cloud-provider-azure/pkg/version.buildDate=$(date -u +'%Y-%m-%dT%H:%M:%SZ')
+        -X k8s.io/client-go/pkg/version.buildDate=$(date -u +'%Y-%m-%dT%H:%M:%SZ')
+      output: cloud-controller-manager
+
 subpackages:
-  - name: "azure-cloud-controller-manager-1.31"
+  - name: "${{package.name}}-compat"
     description: "compat package to place binaries at locations expected by upstream deployment"
     pipeline:
-      - uses: go/build
-        with:
-          packages: ./cmd/cloud-controller-manager
-          ldflags: |
-            -X sigs.k8s.io/cloud-provider-azure/pkg/version.gitVersion=v${{package.version}}
-            -X k8s.io/client-go/pkg/version.gitVersion=v${{package.version}}
-            -X sigs.k8s.io/cloud-provider-azure/pkg/version.gitCommit=$(git rev-parse HEAD)
-            -X k8s.io/client-go/pkg/version.gitCommit=$(git rev-parse HEAD)
-            -X sigs.k8s.io/cloud-provider-azure/pkg/version.buildDate=$(date -u +'%Y-%m-%dT%H:%M:%SZ')
-            -X k8s.io/client-go/pkg/version.buildDate=$(date -u +'%Y-%m-%dT%H:%M:%SZ')
-          output: cloud-controller-manager
       - runs: |
           mkdir -p ${{targets.subpkgdir}}/usr/local/bin
           ln -sf /usr/bin/cloud-controller-manager ${{targets.subpkgdir}}/usr/local/bin/cloud-controller-manager
-    test:
-      pipeline:
-        - name: help message
-          runs: |
-            /usr/bin/cloud-controller-manager --help
-            /usr/bin/cloud-controller-manager --version
+
+test:
+  pipeline:
+    - name: help message
+      runs: |
+        /usr/bin/cloud-controller-manager --help
+        /usr/bin/cloud-controller-manager --version
 
 update:
   enabled: true
