Add pkgconf test pipeline for util-linux

--- a/util-linux.yaml
+++ b/util-linux.yaml
@@ -105,6 +105,9 @@ subpackages:
       runtime:
         - util-linux
     description: util-linux dev
+    test:
+      pipeline:
+        - uses: test/pkgconf
 
   - name: util-linux-doc
     pipeline:
