--- a/libyang.yaml
+++ b/libyang.yaml
@@ -119,3 +119,7 @@ test:
 
         gcc -o yang yang.c -l:libyang.so -DLIBYANG_VERSION=\"$(pkg-config --modversion libyang)\"
         ./yang
+        ./yang | grep ${{package.version}}
+        ./yang | grep "parsed"
+        ./yang | grep "example"
+        ./yang | grep "yang module"
